WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151794
Modern IDB: storage/indexeddb/cursor-skip-deleted.html crashes
https://bugs.webkit.org/show_bug.cgi?id=151794
Summary
Modern IDB: storage/indexeddb/cursor-skip-deleted.html crashes
Brady Eidson
Reported
2015-12-02 22:25:37 PST
Modern IDB: storage/indexeddb/cursor-skip-deleted.html fails Turns out we were mis-using reverse_iterators when tracking what records were being changed in the object store. Since std::set iterators are bi-directional there's no reason to not just use a single forward iterator and decrement it instead of increment it.
Attachments
Patch v1
(17.10 KB, patch)
2015-12-02 22:38 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-02 22:38:45 PST
Created
attachment 266514
[details]
Patch v1
Alex Christensen
Comment 2
2015-12-03 11:01:16 PST
Comment on
attachment 266514
[details]
Patch v1 Goodbye reverse_iterators!
WebKit Commit Bot
Comment 3
2015-12-03 11:53:07 PST
Comment on
attachment 266514
[details]
Patch v1 Clearing flags on attachment: 266514 Committed
r193360
: <
http://trac.webkit.org/changeset/193360
>
WebKit Commit Bot
Comment 4
2015-12-03 11:53:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug