Source/WebCore: Modern IDB: storage/indexeddb/cursor-skip-deleted.html crashes. https://bugs.webkit.org/show_bug.cgi?id=151794

Reviewed by Alex Christensen.

STL reverse_iterators are a tricky beast.

They are implemented in terms of a normal forward iterator (called the "base" iterator),
and they decrement a copy of that iterator when dereferenced.

So when monitoring deletes from  a std::set to check if we should invalidate our current
reverse_iterator, we were incorrectly comparing the deleted key to the value pointed by the
reverse_iterator instead of its base iterator.

Since the iterators in question are bidirectional, anyways, we can just use a single iterator
and either increment or decrement it as needed.

No new tests (At least one failing (crashing) test now passes).

* Modules/indexeddb/server/MemoryObjectStoreCursor.cpp:
(WebCore::IDBServer::MemoryObjectStoreCursor::objectStoreCleared):
(WebCore::IDBServer::MemoryObjectStoreCursor::keyDeleted):
(WebCore::IDBServer::MemoryObjectStoreCursor::keyAdded):
(WebCore::IDBServer::MemoryObjectStoreCursor::setFirstInRemainingRange):
(WebCore::IDBServer::MemoryObjectStoreCursor::setForwardIteratorFromRemainingRange):
(WebCore::IDBServer::MemoryObjectStoreCursor::setReverseIteratorFromRemainingRange):
(WebCore::IDBServer::MemoryObjectStoreCursor::currentData):
(WebCore::IDBServer::MemoryObjectStoreCursor::incrementForwardIterator):
(WebCore::IDBServer::MemoryObjectStoreCursor::incrementReverseIterator):
(WebCore::IDBServer::MemoryObjectStoreCursor::iterate):
(WebCore::IDBServer::MemoryObjectStoreCursor::firstForwardIteratorInRemainingRange): Deleted.
(WebCore::IDBServer::MemoryObjectStoreCursor::firstReverseIteratorInRemainingRange): Deleted.
(WebCore::IDBServer::MemoryObjectStoreCursor::hasIterators): Deleted.
(WebCore::IDBServer::MemoryObjectStoreCursor::hasValidPosition): Deleted.
(WebCore::IDBServer::MemoryObjectStoreCursor::clearIterators): Deleted.
* Modules/indexeddb/server/MemoryObjectStoreCursor.h:

LayoutTests:
Modern IDB: storage/indexeddb/cursor-skip-deleted.html fails.
https://bugs.webkit.org/show_bug.cgi?id=151794

Reviewed by Alex Christensen.

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/169948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193360 268f45cc-cd09-0410-ab3c-d52691b4dbfc